--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
     
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container">
-            <a class="navbar-brand" href="#">CR Mate</a>
+            <a class="navbar-brand" href="#">
+                <img src="rsx/rect_logo.svg" alt="Bootstrap" width="200" height="40">
+            </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
             </button>
