--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    <a class="nav-link active mb-1 mb-lg-0" aria-current="page" href="#">Home</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">NoticeBoard</a>
+                <li class="nav-item sh-nb">
+                    <a class="nav-link mb-1 mb-lg-0" href="#">NoticeBoard</a>
                 </li>
                 
                 <li class="nav-item">
